...
          )}
        </>
      )}

      {!qrData && (
        <Button
          testID='toggle-manual-config-button'
          mode='text'
          disabled={importStatus !== 'idle'}
          onPress={onToggleManualEdit}
        >
          <Text>{t('Import.ManualConfiguration')}</Text>
        </Button>
...

      <Collapsible collapsed={!manualEdit}>
        <ManualConfigHint variant='bodySmall'>
          {t('Import.ManualConfigurationHint')}
        </ManualConfigHint>
        <TextInput
          testID='manual-json-input'
          label={t('Import.QRCodeJSON')}
          multiline
          numberOfLines={4}
          placeholder='{"baseUrl":"http://...","workspaceId":"...","workspaceName":"...","token":"..."}'
          onChangeText={onManualJSONInput}
        />
...
