...
  return (
    <>
      {ENABLE_E2E_WIKI_HOOKS
        ? (
          <>
            <TextInput
              testID='e2e-tiddler-title'
              style={styles.e2eTiddlerTitleInput}
              value={endToEndTestTiddlerTitle}
              onChangeText={setEndToEndTestTiddlerTitle}
            />
            <Pressable
              testID='e2e-create-tiddler-button'
              style={styles.e2eCreateTiddlerButton}
              onPress={() => {
                const title = endToEndTestTiddlerTitle || 'E2E Test';
                webViewReference.current?.injectJavaScript(
                  `window.__e2e_createTiddler(${JSON.stringify(title)})`,
                );
...
