...
  );

  const autoStartImport = route.params.autoStartImport;
  const isLocalTemplate = typeof route.params.localTemplateAsset === 'string';

  return (
    <Container testID='importer-screen' keyboardShouldPersistTaps='handled'>
      {/* Hide server config if is importing from template, for simplicity for new users. */}
      {!isLocalTemplate && autoStartImport !== true && importStatus === 'idle' && serverConfigs}
      {!isLocalTemplate && importStatus === 'idle' && !qrScannerOpen && qrData && createdHtmlWorkspace === undefined && (
        <>
          <WorkspaceNameInput
            label={t('EditWorkspace.Name')}
            value={wikiName}
            onChangeText={(newText: string) => {
              setWikiName(newText);
            }}
          />
          <ImportWikiButton
            testID='import-wiki-confirm-button'
            mode='elevated'
            onPress={addServerAndImport}
            labelStyle={{ padding: ButtonLabelPadding }}
          >
            <Text>
              {isHtmlQRData(qrData) ? t('Import.ImportWiki') : selectedSubWikiIds.length > 0 ? t('Import.ImportWikis') : t('Import.ImportWiki')}
...
